syntax = "proto3";

package ad;

option go_package = "ad/proto;proto"; // replace with your actual Go module path

service AdService {
  rpc GetAdById(GetAdByIdRequest) returns (GetAdByIdResponse);
  rpc CreateAd(CreateAdRequest) returns (CreateAdResponse);
}

message Ad {
  string id = 1;
  string title = 2;
  string description = 3;
  string url = 4;
}

message GetAdByIdRequest {
  string id = 1;
}

message GetAdByIdResponse {
  Ad ad = 1;
}

message CreateAdRequest {
  string title = 1;
  string description = 2;
  string url = 3;
}

message CreateAdResponse {
  string id = 1;
}
